# shoefits

./: .gitignore  .pre-commit-config.yaml  README.md  SConstruct  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  lint.yaml
doc/: .gitignore  index.rst  manifest.yaml
doc/lsst.shoefits/: index.rst
python/lsst/: __init__.py
python/lsst/shoefits/: __init__.py  _adapter.py  _annotations.py  _compression.py  _dtypes.py  _field_info.py  _fits_options.py  _fits_read_context.py  _fits_reader.py  _fits_write_context.py  _fits_writer.py  _frame.py  _geom.py  _image.py  _mask.py  _model.py  _polymorphic.py  _read_context.py  _struct.py  _write_context.py  asdf_utils.py  json_utils.py  keywords.py
python/lsst/shoefits/examples/: afw.py
python/lsst/shoefits/testing/: __init__.py  contexts.py
python/shoefits/: __init__.py  _asdf.py  _compression.py  _dtypes.py  _field.py  _field_base.py  _field_info.py  _fits_reader.py  _fits_schema.py  _fits_writer.py  _frame.py  _frames.py  _geom.py  _image.py  _images.py  _mask.py  _schema.py  _schema_base.py  _schema_path.py  _skymap.py  _struct.py  _value_field.py  _yaml.py  asdf_utils.py  json_schema.py  json_utils.py  struct.ipynb
python/shoefits/schema/: __init__.py  _all.py  _arrays.py  _base.py  _containers.py  _frames.py  _images.py  _schema.py  _simple.py
tests/: test_asdf_utils.py  test_examples_afw.py  test_fits_writer.py  test_pydantic_annotations.py
ups/: shoefits.cfg
